          ...

       Note that the output format has changed slightly (no leading " - ").
       The -l command-line option can be used to list just the static
       modules.

       Also note that order of the module listed via -vv shows the order
       in which the core proftpd engine calls each module, i.e. the modules
       are listed in module order.

  + New configuration directives:

      MaxTransferPerHost

      MaxTransfersPerUser

  + Enhanced configuration directives:

      BanOnEvent ClientConnectRate

        See doc/contrib/mod_ban.html#BanOnEvent

      LogFormat %f

        RNFR/RNTO, SITE CHGRP, SITE CHMOD

      TLSOptions EnableDiags

        See doc/contrib/mod_tls.html#TLSOptions

      TLSRequired !data, ctrl+!data, auth+!data

        See doc/contrib/mod_tls.html#TLSRequired for more information.

  + Deprecated configuration directives

      AnonymousGroup

        This directive is NOT recommended, and relies on a "special
        dynamic configuration" which is very confusing to users.  It will
        be removed in the 1.3.3 ProFTPD release cycle.

  + New modules:

      mod_dynmasq

        Useful for sites using dynamic DNS and other similar services.
        This module automatically refreshes the IP address of the daemon,
        so that the correct address is communicated to clients i.e. via
        the MasqueradeAddress directive.  See the module documentation at:

          doc/contrib/mod_dynmasq.html

      mod_facts

        Implements the MLSD and MLST commands, as per RFC3659.  Also provides
        the MFF and MFMT commands from:

          http://www.ietf.org/internet-drafts/draft-somers-ftp-mfxx-03.txt
 
        Module documentation is available for mod_facts at:

          doc/modules/mod_facts.html

      mod_unique_id

        Generates a unique ID for every FTP session.  This ID can be
        written to log files and stored in databases, for tracking all of